@startuml class-protocols-services
' Data source: Repomix (compressed signatures)
' Scope: Protocols + Services
' Generated: 2026-03-20

top to bottom direction

namespace Protocols {
    interface AudioRecording <<protocol>> {
        + startRecording() async throws
        + stopRecording() async -> [Float]
        + audioLevel: Float
    }

    interface ContextDetecting <<protocol>> {
        + detectContext() -> FormatContext
    }

    interface Formatting <<protocol>> {
        + format(transcription:context:language:) -> AsyncStream
        + warmup() async
        + healthCheck() async -> Bool
        + isReachable() async -> Bool
        + pullModel(name: String) -> AsyncThrowingStream
        + fetchModels() async -> [String]
    }

    interface Transcribing <<protocol>> {
        + setup(model: WhisperModel) async throws
        + switchModel(model: WhisperModel) async throws
        + transcribe(audio:language:) async throws -> Transcription
    }
}

namespace Services {
    class WhisperKitRecorder <<final class>> {
        - processor: AudioProcessor
        - minimumDuration: TimeInterval
        - recordingStart: Date?
        + audioLevel: Float
        + startRecording() async throws
        + stopRecording() async -> [Float]
    }

    class ContextDetector <<struct>> {
        - {static} emailBundleIds: Set<String>
        - {static} browserBundleIds: Set<String>
        - {static} emailAddressPattern: NSRegularExpression
        - {static} emailWindowTitleSubstrings: [String]
        + detectContext() -> FormatContext
        - windowTitles(for: pid_t) -> [String]
    }

    class OllamaFormatter <<struct>> {
        - baseURL: URL
        - session: URLSession
        - model: String
        + {static} defaultModel: String
        + format(transcription:context:language:) -> AsyncStream
        + warmup() async
        + healthCheck() async -> Bool
        + isReachable() async -> Bool
        + pullModel(name: String) -> AsyncThrowingStream
        + fetchModels() async -> [String]
        - buildRequest(...) -> URLRequest
    }

    class WhisperKitTranscriber <<final class>> {
        - whisperKit: WhisperKit?
        - {static} downloadBase: URL
        + setup(model: WhisperModel) async throws
        + switchModel(model: WhisperModel) async throws
        + transcribe(audio:language:) async throws -> Transcription
    }

    class ClipboardManager <<final class>> {
        - pasteboard: NSPasteboard
        - maxHistorySize: Int
        - previousItem: String?
        + history: [String]
        + copy(text: String)
        + copyAndPaste(text: String) -> Bool
        + undo()
    }

    class HotkeyManager {
        + onRecordStart: (() -> Void)?
        + onRecordStop: (() -> Void)?
        + onDiscard: (() -> Void)?
        - hotkeyChoice: HotkeyChoice
        + start() -> Bool
        + stop()
        ~ handleEvent(type:event:) -> Unmanaged<CGEvent>?
        - handleFn(type:event:) -> Unmanaged<CGEvent>?
        - handleRightOption(type:event:) -> Unmanaged<CGEvent>?
        - handleSectionSign(type:event:) -> Unmanaged<CGEvent>?
    }

    enum OllamaError <<enum>> {
        + errorDescription: String?
    }

    enum TranscriberError <<enum>> {
        + errorDescription: String?
    }
}

' Protocol conformance
Services.WhisperKitRecorder ..|> Protocols.AudioRecording
Services.ContextDetector ..|> Protocols.ContextDetecting
Services.OllamaFormatter ..|> Protocols.Formatting
Services.WhisperKitTranscriber ..|> Protocols.Transcribing

' Composition — nested/owned types
Services.OllamaFormatter *-- Services.OllamaError
Services.WhisperKitTranscriber *-- Services.TranscriberError

@enduml
